JDK 17 patch